feat: add complete vision of modal window

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="modal__additives">
-                        <div class="modal__additives-name">Size</div>
+                        <div class="modal__additives-name">Additives</div>
                         <div class="modal__additives-variables">
                             <div class="modal__additives-choise">
                                 <div class="modal__additives-variable-scale">1</div>
