--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -11,7 +11,7 @@
     <title>Coffee house</title>
 </head>
 <body>
-    <div class="modal">
+    <!-- <div class="modal">
         <div class="modal__window">
             <div class="modal__item-img-wrapper">
                 <img src="../../assets/jpg/coffee-1.jpg" alt="img" class="modal__item-img">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="wrapper wrapper-menu">
         <header class="header">
             <a href="../../index.html">
