fix: fix items position

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="menu__food-container">
-                    <div class="menu__tea-category">
+                    <div class="menu__coffee-category">
                         <div class="menu__food-item">
                             <div class="menu__item-img-wrapper">
                                 <img src="../../assets/jpg/coffee-1.jpg" alt="img" class="menu__item-img">
