feat: add complete tab animation

--- a/coffee-house/src/html/menu.html
+++ b/coffee-house/src/html/menu.html
@@ -246,7 +246,7 @@
                         </div>
                         <div class="menu__food-item">
                             <div class="menu__item-img-wrapper">
-                                <img src="../../assets/jpg/coffee-7.jpg" alt="img" class="menu__item-img">
+                                <img src="../../assets/jpg/dessert-7.png" alt="img" class="menu__item-img">
                             </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Chocolate cake</div>
@@ -256,11 +256,11 @@
                         </div>
                         <div class="menu__food-item">
                             <div class="menu__item-img-wrapper">
-                                <img src="../../assets/jpg/coffee-8.jpg" alt="img" class="menu__item-img">
+                                <img src="../../assets/jpg/dessert-8.png" alt="img" class="menu__item-img">
                             </div>
                             <div class="menu__item-description">
                                 <div class="menu__item-name">Black forest</div>
-                                <div class="menu__item-about">A combination of thin sponge cake with cherry jam and light chocolate mousse/div>
+                                <div class="menu__item-about">A combination of thin sponge cake with cherry jam and light chocolate mousse</div>
                                 <div class="menu__item-price">$6.50</div>
                             </div>
                         </div> 
