feat: add video

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -39,6 +39,11 @@
         </header>
         <main class="main">
             <section class="enjoy">
+                <video class="video__background" autoplay loop muted>
+                    <!-- Укажите путь к вашему видеофайлу -->
+                    <source src="./assets/video/video.mp4" type="video/mp4">
+                    Ваш браузер не поддерживает тег video.
+                  </video>
                 <div class="enjoy__container">
                     <h1><span>Enjoy</span> premium <br> coffee at our <br> charming cafe</h1>
                     <p>
