--- a/hangman/index.html
+++ b/hangman/index.html
@@ -7,6 +7,6 @@
     <title>Hangman</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
