--- a/hangman/index.html
+++ b/hangman/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <title>Hangman</title>
 </head>
 <body>
+    <main class="main">
+        <div class="gallow">
+            <div class="gallow__block">
+                <div class="gallow__head"></div>
+                <div class="gallow__body"></div>
+                <div class="gallow__hand-one"></div>
+                <div class="gallow__hand-two"></div>
+                <div class="gallow__leg-one"></div>
+                <div class="gallow__leg-two"></div>
+            </div>
+            <div class="gallow__game-name">HANGMAN GAME</div>
+        </div>
+    </main>
     <script src="./dist/main.js"></script>
 </body>
 </html>
