--- a/hangman/index.html
+++ b/hangman/index.html
@@ -13,6 +13,6 @@
     <title>Hangman</title>
   </head>
   <body>
-    <script src="./tisd/main.js"></script>
+    <script src="./tsid/main.js"></script>
   </body>
 </html>
