redeploy from tsid

--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -6,6 +6,6 @@
     <title>Nonograms by Denis:D</title>
   </head>
   <body>
-    <script src="dist/main.js"></script>
+    <script src="tsid/main.js"></script>
   </body>
 </html>
