--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nonograms by Denis:D</title>
+    <title>Nonograms by Denis Svetleishii:D</title>
   </head>
   <body>
     <script src="tsid/main.js"></script>
