--- a/news-api/src/index.html
+++ b/news-api/src/index.html
@@ -15,10 +15,16 @@
       <div class="news"></div>
     </main>
     <footer>
+
+      <div class="students-link">
+        <a class="students-link__link" href="https://github.com/IamBigBobby">Denis Svetleishii</a>
+      </div>
       <p class="copyright">
         Copyright
         <a href="https://newsapi.org">NewsAPI</a>
       </p>
+      <div class="rs-logo"></div>
+      
     </footer>
 
     <template id="sourceItemTemp">
