--- a/rss-puzzle/src/index.html
+++ b/rss-puzzle/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>rss-puzzle</h1>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
