--- a/rss-puzzle/src/index.html
+++ b/rss-puzzle/src/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rss-puzzle</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>rss-puzzle</h1>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
