--- a/rss-puzzle/src/index.html
+++ b/rss-puzzle/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RSS-PUZZLE by Denis Svetleishii</title>
   </head>
   <body></body>
 </html>
