--- a/fun-chat/index.html
+++ b/fun-chat/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Fun chat</title>
-    <link rel="icon" href="favicon.ico" />
-    <script defer="defer" src="main.js"></script>
-  </head>
-  <body></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/x-icon" href="favicon.ico"/><title>Fun chat</title><link rel="icon" href="favicon.ico"><script defer="defer" src="main.js"></script></head><body></body></html>
